# feretto.rs

./: .gitignore  .travis.yml  Cargo.toml  LICENSE  README.md  feretto.example.json
src/: config.rs  event.rs  main.rs
