[package]
name = "feretto"
version = "0.0.3"
authors = ["Joseph Kordish <joe@unicornclouds.com>"]

description = "Utility to generate consul events from matched strings found in a file/log"
homepage = "https://github.com/jkordish/feretto"
repository = "https://github.com/jkordish/feretto"

readme = "README.md"
license = "The MIT License (MIT)"

keywords = [
  "consul",
  "event",
  "notify",
  "logs"
]

[dependencies]
docopt = "^0.7"
docopt_macros = "^0.7"
rustc-serialize = "^0.3"
curl = "0.2.19"
notify = "^4"
aho-corasick = "^0.6"
serde = "^1"
serde_json = "^1"
serde_macros = "^0.8"
serde_codegen = "^0.9"
serde_codegen_internals = "^0.14"
crossbeam = "^0.2"
clippy = {version="*", optional = true}

[features]
default=[]
