[package]
name        = "feretto"
version     = "0.2.5"
authors     = ["Joseph Kordish <joe@unicornclouds.com>"]
description = "Utility to generate aws sns events from matched strings found in a file/log"
homepage    = "https://github.com/jkordish/feretto"
repository  = "https://github.com/jkordish/feretto"
readme      = "README.md"
license     = "The MIT License (MIT)"

keywords = [
  "aws",
  "sns",
  "event",
  "notify",
  "logs"
]

[[bin]]
name = "feretto"
path = "src/main.rs"

[dependencies]
notify       = "4"
lazy_static  = "1"
regex        = "1"
get_if_addrs = "0.5"
serde        = "1"
serde_json   = "1"
serde_derive = "1"
crossbeam    = "0.3"
rusoto_core  = "0.32"
rusoto_sns   = "0.32"
rusoto_sts   = "0.32"
slog         = "2"
slog-term    = "2"
slog-async   = "2"

[features]
default=[]

[profile.release]
opt-level        = 3
codegen-units    = 1
